# flirtlib

./: CMakeLists.txt  package.xml
cmake/: Config.cmake.in
include/flirtlib/feature/: AbstractFeatureSetMatcher.h  BetaGrid.h  CurvatureDetector.h  Descriptor.h  Detector.h  InterestPoint.h  MultiScaleDetector.h  NormalDetector.h  RangeDetector.h  ShapeContext.h
include/flirtlib/geometry/: point.h
include/flirtlib/sensors/: LaserReading.h
include/flirtlib/sensorstream/: CarmenLog.h  LogReader.h  LogSensorStream.h  LogWriter.h  SensorStream.h
include/flirtlib/utils/: HistogramDistances.h  HistogramDistances.hpp  PoseEstimation.h  SimplePeakFinder.h
src/: CMakeLists.txt
src/applications/: FLIRTDemo.h  RansacLoopClosureDrawMovie.cpp  RansacLoopClosureTest.cpp
src/feature/: AbstractFeatureSetMatcher.cpp  BetaGrid.cpp  BetaGrid.h  CMakeLists.txt  CurvatureDetector.cpp  InterestPoint.cpp  MultiScaleDetector.cpp  NormalBlobDetector.cpp  NormalBlobDetector.h  NormalDetector.cpp  NormalEdgeDetector.cpp  NormalEdgeDetector.h  RangeDetector.cpp  RansacFeatureSetMatcher.cpp  RansacFeatureSetMatcher.h  RansacMultiFeatureSetMatcher.cpp  RansacMultiFeatureSetMatcher.h  ShapeContext.cpp  ShapeContext.h
src/geometry/: CMakeLists.txt  point.cpp
src/gui/: AbstractRenderer.h  BetaGridPresenter.h  BoxParameterWidget.h  CorrespondenceRenderer.cpp  CorrespondenceRenderer.h  DescriptorChooserPresenter.h  DescriptorPresenter.h  DetectorChooserPresenter.h  DetectorPresenter.h  FeatureSetMatcherPresenter.h  InterestPointRenderer.h  LaserReadingRenderer.h  MultiScaleCurvatureDetectorPresenter.h  MultiScaleDetectorPlotWidget.h  MultiScaleDetectorPresenter.h  MultiScaleNormalDetectorPresenter.h  PeakFinderPresenter.h  PolarGridGraphicsItem.cpp  PolarGridRenderer.h  RansacPresenter.h  RendererWidget.cpp  RendererWidget.h  SensorStreamWidget.cpp  SensorStreamWidget.h  ShapeContextPresenter.h  SimplePeakFinderPresenter.h  TabbedParameterWidget.h
src/sensors/: AbstractReading.cpp  CMakeLists.txt  LaserReading.cpp
src/sensorstream/: CMakeLists.txt  CarmenLog.cpp  LogSensorStream.cpp
src/utils/: CMakeLists.txt  Convolution.h  PoseEstimation.cpp  Regression.cpp  Regression.h  SimpleMinMaxPeakFinder.cpp  SimpleMinMaxPeakFinder.h  SimplePeakFinder.cpp
